<resources>

    <!-- Homepage -->

    <string name="app_name">DndCharacterManager</string>
    <string name="welcome_message">Welcome back adventurer!</string>
    <string name="create_character_button">Create new character</string>

    <!-- Character Sheet -->

    <string name="hit_button">Hit</string>
    <string name="edit_hp_button">Edit HP</string>
    <string name="edit_temp_hp_button">Edit temp HP</string>

    <string name="hit_points">Hit Points</string>
    <string name="temp_hit_points">Temp. Hit Points</string>

    <string name="hit_management">Hit Management</string>
    <string name="hp_management">HP Management</string>
    <string name="temp_hp_management">Temp HP Management</string>
    <string name="hp">HP</string>
    <string name="temp_hp">Temp HP</string>
    <string name="add_hit">Add Hit</string>
    <string name="add_hp">Add HP</string>
    <string name="add_temp_hp">Add Temp HP</string>
    <string name="lose_hp">Lose HP</string>
    <string name="lose_temp_hp">Lose Temp HP</string>

    <string name="prof_bonus">PROF. BONUS</string>
    <string name="walk_speed">WLK. SPEED</string>
    <string name="initiative">INITIAT.</string>
    <string name="armor_class">ARMOR CLASS</string>

    <string name="strength">STRENGTH</string>
    <string name="dexterity">DEXTERITY</string>
    <string name="constitution">CONSTITUTION</string>
    <string name="intelligence">INTELLIGENCE</string>
    <string name="wisdom">WISDOM</string>
    <string name="charisma">CHARISMA</string>

    <string name="saving_throws">Saving Throws</string>

    <!-- Inventory -->

    <string name="inventory_title">Inventory</string>
    <string name="item">Item</string>
    <string name="item_name">Item name</string>
    <string name="quantity">Quantity</string>
    <string name="weight">Weight</string>
    <string name="action">Action</string>

    <string name="total_weight">Total weight: </string>
    <string name="max_weight">Max weight: </string>
    <string name="remaining_weight">Remaining weight:</string>

    <string name="add_item">Add item</string>
    <string name="add_item_to_inventory">Add item to inventory</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>

    <!-- Attack/Spells -->

    <string name="spells_title">Spells</string>
    <string name="melee_title">Melee attack</string>
    <string name="level">Level</string>
    <string name="spell_dc_saving_throws">DC Saving Throws:</string>
    <string name="attack_bonus">Attack Bonus:</string>
    <string name="total_rages">Total rages:</string>
    <string name="slots">Slots:</string>

    <string name="proficiency">Prof.</string>
    <string name="weapon">Weapon</string>
    <string name="damage">Damage</string>
    <string name="character_image_added">Character image added</string>
    <string name="character_builder">Character Builder</string>
    <string name="name">Name</string>
    <string name="character_name">Character Name</string>
    <string name="race">Race</string>
    <string name="dndClass">Class</string>
    <string name="add_character_image">Add character image</string>
    <string name="error_creating_character">Error creating character</string>
    <string name="character_image">Character Image</string>
    <string name="delete_button">Delete Button</string>
    <string name="choose_spells">Choose 2 new spells</string>
    <string name="warning_exceeded_2_spells">You can only select 2 spells</string>
    <string name="level_up">Level Up!</string>
    <string name="stat_upgrade">%1$s Upgrade</string>
    <string name="error_level_up_not_found">Cannot level up</string>
    <string name="features_unlocked">You have unlocked the following features:</string>
    <string name="ability_improvement_hint">Choose an ability score to improve by two, or two ability scores to improve by one.</string>
    <string name="ability_scores_increased">Ability scores increased!</string>
    <string name="choose_arcane_tradition">Choose an Arcane Tradition</string>
    <string name="rest_hint">Even the mightiest warriors need to rest sometimes.</string>
    <string name="short_rest">Short Rest</string>
    <string name="long_rest">Long Rest</string>
    <string name="heart">Heart</string>
    <string name="hp_before_rest">HP before rest: %1$s / %2$s</string>
    <string name="hp_after_short_rest">HP after short rest: %1$s / %2$s</string>
    <string name="hp_after_long_rest">HP after long rest: %1$s / %2$s</string>
    <string name="recover_spell_slots_hint">Choose spell slots to recover</string>
    <string name="slots_to_select_left">You have additional %1$s slots to select</string>
    <string name="slots_consumed_hint">This will consume %1$s out of %2$s slots</string>
    <string name="level_n_spells">Level: %1$s Spells</string>
    <string name="spells_to_prepare">Choose spells to prepare</string>
    <string name="you_selected_n_out_of_m_spells">You selected %1$s out of %2$s spells</string>
    <string name="remove">Remove</string>
    <string name="add">Add</string>
    <string name="spell_slots_left">Spell Slots Left</string>
    <string name="spells_prepared">Spells Prepared</string>
    <string name="no_spells_to_recover">No spells to recover or no spells prepared.</string>
    <string name="not_a_spellcaster">You are not a spellcaster, cannot recover slots.</string>
    <string name="spells_chosen">You chose the following spells:</string>
</resources>