...

            // Mock Races
            val eladrin = RaceEnum.ELADRIN.race
            val dwarf = RaceEnum.DWARF.race

            // Mock Spells
            val magicMissile: Spell = MockSpells.getSpellByName("Magic Missile")!!

            // Mock Ability Values
            val abilityValues1 = mapOf(
                strength to 15,
                dexterity to 14,
                constitution to 13,
...
                constitution to 14,
                intelligence to 16,
                wisdom to 13,
                charisma to 11
            )

            val item1 = InventoryItem("Health potion", 5, 1.5)
            val item2 = InventoryItem("Paper", 1, 0.2)
            val item3 = InventoryItem("Brick", 1, 2.5)
            val item4 = InventoryItem("Book", 1, 2.0)

            val weapon1 = Weapon(1, "Hammer", "1d12")

...
